kubernetes/production/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    phpunitgen: phpunitgen-nginx
  name: phpunitgen-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      phpunitgen: phpunitgen-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        phpunitgen: phpunitgen-nginx
        name: phpunitgen-nginx
    spec:
      containers:
      - image: paulthebaud/phpunitgen-nginx
        name: phpunitgen-nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
        tty: true
      restartPolicy: Always
status: {}
