kubernetes/production/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpunitgen-nginx
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    phpunitgen: phpunitgen-nginx
status:
  loadBalancer: {}
